--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "league/container": "^3.3.0",
+        "league/route": "^4.3.1",
+        "laminas/laminas-diactoros": "^2.2.3",
+        "laminas/laminas-httphandlerrunner": "^1.1.0"
+    },
     "autoload": {
         "psr-4": {
             "DataHead\\InterfazFramework\\": "./src"
