--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/container": "^3.3.0",
         "league/route": "^4.3.1",
         "laminas/laminas-diactoros": "^2.2.3",
-        "laminas/laminas-httphandlerrunner": "^1.1.0"
+        "laminas/laminas-httphandlerrunner": "^1.1.0",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
