--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "league/route": "^4.3.1",
         "laminas/laminas-diactoros": "^2.2.3",
         "laminas/laminas-httphandlerrunner": "^1.1.0",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "vlucas/phpdotenv": "^4.1.3"
     },
     "autoload": {
         "psr-4": {
