--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laminas/laminas-diactoros": "^2.2.3",
         "laminas/laminas-httphandlerrunner": "^1.1.0",
         "twig/twig": "^3.0",
+        "doctrine/orm": "^2.7.2",
         "vlucas/phpdotenv": "^4.1.3"
     },
     "autoload": {
