--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laminas/laminas-httphandlerrunner": "^1.1.0",
         "twig/twig": "^3.0",
         "doctrine/orm": "^2.7.2",
-        "vlucas/phpdotenv": "^4.1.3"
+        "vlucas/phpdotenv": "^4.1.3",
+        "symfony/console": "^5.0.7"
     },
     "autoload": {
         "psr-4": {
