--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "twig/twig": "^3.0",
         "doctrine/orm": "^2.7.2",
         "vlucas/phpdotenv": "^4.1.3",
-        "symfony/console": "^5.0.7"
+        "symfony/console": "^5.0.7",
+        "hansott/psr7-cookies": "^3.0.0",
+        "ramsey/uuid": "^4.0.1",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
